Split kompile-app-main into persona apps and consolidate in-flight work
Separates end-user surfaces from admin so an end user's process physically
cannot reach an admin API. There is no Spring Security in kompile-app-parent,
so process separation is the only isolation actually available.

Three Boot apps, each with its own port and SPA:
  kompile-app-chat          :8081  chat, project browsing, read-only fact sheets/graph
  kompile-app-crawl-manager :8082  crawl manager, fact sheets, documents/index, note sync
  kompile-app-main          :8080  admin console only

Controllers move into five web-layer libraries (web-shared, web-chat,
web-crawl, web-graph, web-admin) rather than being filtered at the UI, and
kompile-app-main drops the end-user modules from its dependencies. Persona
boundary tests read the mounted /api/* families off the classpath and fail on
both a missing and an extra mapping, so a widened scanBasePackages cannot
silently re-expose an admin API.

The Angular monolith becomes a four-project workspace under kompile-app-ui:
kompile-ui-shared plus chat-app, crawl-app and admin-app, each attached as its
own classified jar. The pom now binds `npm run test` to the test phase --
surefire found no Java in that module and reported success while running zero
of the ~138 spec files.

kompile-app-ui: 1301 + 252 + 801 + 1712 specs green across the four projects.

Also carries the other work in this tree, some of it from other sessions:
entity-partition crawl control plane, decomposed extraction passes, model
staging security filter and HuggingFace discovery, chat-local MCP and the
Android/iOS acquisition and staging paths, kompile-local-sdk manifest and
tooling, the kompile-project-contract module, and CLI routing.

.gitignore: the blanket *.json rule was swallowing the Angular workspace's
tsconfig and package-lock files, so a clone could build the Java but not the
SPAs -- allowlisted alongside the angular.json/package.json entries that were
force-added earlier. R